cambios en el nombre de mapeos, cambio retorno MainSyntactic y cambio en excepcion